# stability

./: README.md  pyproject.toml
src/stability/: decorators.py
src/stability.egg-info/: PKG-INFO
src/tests/: test_stability.py
src/tests/resources/: test_stability_test_decorator_basics.csv  test_stability_test_decorator_json_file.json  test_stability_test_decorator_non_range_index_fine_when_using_parquet.pq  test_stability_test_decorator_parquet_file.pq  test_stability_test_decorator_with_fixture.csv  test_stability_test_expected_decorator_basics.csv  test_stability_test_expected_decorator_with_fixture.csv  test_stability_test_expected_decorator_yielding_0.csv  test_stability_test_expected_decorator_yielding_1.csv
