[project]
name = "stability"
version = "0.0.4"
authors = [
  { name="Gareth Williams", email="gareth.williams.pypi@gmail.com" },
]
description = "A package for managing stability tests"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "pytest>=8.3.5",
]
